there was a bug when a character is searched, when the page were in dark mode, not all the page was in that state, it fixed now

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,4 +40,5 @@ body {
   flex-direction: column;
   width:100%;
   height:100%;
+  min-height:100vh;
 } 
